--- a/index.html
+++ b/index.html
@@ -6,41 +6,63 @@
       <title>S&O Store</title>
       <!-- CDN Font Awesome Library -->
       <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-            integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"
-      >
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+         crossorigin="anonymous" referrerpolicy="no-referrer">
       <!-- Main Template CSS File -->
       <link rel="stylesheet" href="public/output.css">
+      <link
+         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap"
+         rel="stylesheet" />
    </head>
    <body>
       <header class="header h-screen relative">
          <div class="header__image h-screen">
-            <img src="images/background.jpg" class="absolute z-[-1] h-screen w-screen object-cover" alt="">
+            <img src="images/background.jpg"
+               class="absolute z-[-1] h-screen w-screen object-cover" alt>
          </div>
-         <nav class="header__menu edit-container relative-[1] h-[10em] text-[#fff] flex mix-blend-difference justify-between items-center fixed z-[99999] top-0 font-medium uppercase">
+         <nav
+            class="header__menu edit-container relative-[1] h-[10em] text-[#fff] flex mix-blend-difference justify-between items-center fixed z-[99999] top-0 font-medium uppercase">
             <div class="menu__logo">
                <a href="index.html">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="120" height="105" viewBox="0 0 120 105" fill="none" class="w-[2.5rem]">
-                     <path d="M120 18L83.9468 52.8559V18H0V87.4457L47.8936 87.7117L83.9468 52.8559V87.7117H120V18Z" fill="white"></path>
-                     <path d="M120 18L83.9468 52.8559V18H0V87.4457L47.8936 87.7117L83.9468 52.8559V87.7117H120V18Z" fill="white"></path>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="120"
+                     height="105" viewBox="0 0 120 105" fill="none"
+                     class="w-[2.5rem]">
+                     <path
+                        d="M120 18L83.9468 52.8559V18H0V87.4457L47.8936 87.7117L83.9468 52.8559V87.7117H120V18Z"
+                        fill="white"></path>
+                     <path
+                        d="M120 18L83.9468 52.8559V18H0V87.4457L47.8936 87.7117L83.9468 52.8559V87.7117H120V18Z"
+                        fill="white"></path>
                   </svg>
                </a>
             </div>
             <div class="menu__links-container">
-               <ul class="menu__links flex gap-[2em] tracking-tighter overflow-y-hidden">
-                  <li class="menu__link"><a href="#" class="flex">H<div class="duration-[0.2s]"><span class="hover:text-[#584c4c] duration-[0.3s]">omme</span></div></a></li>
-                  <li class="menu__link"><a href="#" class="flex">F<div class="duration-[0.2s]"><span class="hover:text-[#584c4c] duration-[0.3s]">emme</span></div></a></li>
-                  <li class="menu__link"><a href="#" class="flex">M<div class="duration-[0.2s]"><span class="hover:text-[#584c4c] duration-[0.3s]">ission</span></div></a></li>
-                  <li class="menu__link"><a href="#" class="flex">J<div class="duration-[0.2s]"><span class="hover:text-[#584c4c] duration-[0.3s]">ournal</span></div></a></li>
+               <ul
+                  class="menu__links flex gap-[2em] tracking-tighter overflow-y-hidden">
+                  <li class="menu__link"><a href="#" class="flex">H<div
+                           class="duration-[0.2s]"><span
+                              class="hover:text-[#584c4c] duration-[0.3s]">omme</span></div></a></li>
+                  <li class="menu__link"><a href="#" class="flex">F<div
+                           class="duration-[0.2s]"><span
+                              class="hover:text-[#584c4c] duration-[0.3s]">emme</span></div></a></li>
+                  <li class="menu__link"><a href="#" class="flex">M<div
+                           class="duration-[0.2s]"><span
+                              class="hover:text-[#584c4c] duration-[0.3s]">ission</span></div></a></li>
+                  <li class="menu__link"><a href="#" class="flex">J<div
+                           class="duration-[0.2s]"><span
+                              class="hover:text-[#584c4c] duration-[0.3s]">ournal</span></div></a></li>
                </ul>
             </div>
-            <div class="menu__notify w-[120px] flex justify-between items-center">
-               <a href="#" class="menu__notification w-[10px] h-[10px] rounded-[50%] bg-[#fff] animate-opacity"></a>
+            <div
+               class="menu__notify w-[120px] flex justify-between items-center">
+               <a href="#"
+                  class="menu__notification w-[10px] h-[10px] rounded-[50%] bg-[#fff] animate-opacity"></a>
                <div class="menu__cart"><a href="#">p (0)</a></div>
             </div>
          </nav>
-         <div class="header__text font-bold mix-blend-difference text-[#fff] absolute top-[50%] translate-y-[-50%] left-[50%] translate-x-[-50%] flex gap-[0.3em] text-[7.3rem]">
+         <div
+            class="header__text font-bold mix-blend-difference text-[#fff] absolute top-[50%] translate-y-[-50%] left-[50%] translate-x-[-50%] flex gap-[0.3em] text-[7.3rem]">
             <div class="header__text1 flex">
                <p>R</p>
                <p>E</p>
@@ -57,9 +79,71 @@
                <p>R</p>
                <p>G</p>
                <p>Y</p>
-            </div>
+            </divf>
          </div>
       </header>
+      <main>
+         <section class="hiking pt-[80px]  bg-white">
+            <div class="container flex gap-[10%] ">
+               <div class="left flex flex-col  ml-10">
+                  <p class="text1 w-[250px] text-sm text-[#838282] ">VIVEZ LE
+                     MOUVEMENT
+                     PLEINEMENT EN VILLE
+                     COMME
+                     DANS
+                     LES
+                     GRANDS ESPACES. NE LAISSEZ PAS VOS VÊTEMENTS RETENIR
+                     VOTRE
+                     SUPERACTIVITÉ, ÉQUIPEZ VOUS DU JUSTE NÉCESSAIRE</p>
+                  <div
+                     class="hiking__img pt-20 pr-10 w-full justify-end items-end flex "><img
+                        src="images/2.webp" class="w-[40%] min-w-[150px]"
+                        alt></div>
+               </div>
+               <div class="right mt-[20%] flex flex-col justify-center  ">
+                  <div class="categories">
+                     <div class="title">
+                        <h4 class="font-medium mb-12">VESTIAIRES</h4>
+                     </div>
+                     <div
+                        class="cat rela text-[70px] font-[600] tracking-wide w-full">
+                        <div class="category flex relative w-full items-center" id="c1">
+                           <div class="wrapper h-[1.4em] overflow-y-hidden ">
+                              <div
+                                 class="secondwrapper flex flex-col duration-300">
+                                 <a href="#"
+                                    class><span>H</span><span>I</span><span>K</span><span>I</span><span>N</span><span>G</span></a>
+                                 <a href="#" class="mt-[-30px]"><span>H</span><span>I</span><span>K</span><span>I</span><span>N</span><span>G</span></a>
+                              </div>
+                           </div>
+                           <a href="#" class="text-[15px] align-middle">(8)</a>
+                        </div>
+                        <div class="category flex relative w-full items-center" id="c2">
+                           <div class="wrapper h-[1.4em] overflow-y-hidden ">
+                              <div
+                                 class="secondwrapper flex flex-col duration-300">
+                                 <a href="#" class><span>T</span><span>R</span><span>I</span><span>A</span><span>L</span></a>
+                                 <a href="#" class="mt-[-30px]"><span>T</span><span>R</span><span>I</span><span>A</span><span>L</span></a>
+                              </div>
+                           </div>
+                           <a class="text-[15px] align-middle" href="#">(6)</a>
+                        </div>
+                        <div class="category flex relative w-full items-center " id="c3">
+                           <div class="wrapper h-[1.4em] overflow-y-hidden ">
+                              <div
+                                 class="secondwrapper flex flex-col duration-300">
+                                 <a href="#" class><span>B</span><span>O</span><span>U</span><span>L</span><span>D</span><span>D</span><span>R</span><span>I</span><span>N</span><span>G</span></a>
+                                 <a href="#" class="mt-[-30px]"><span>B</span><span>O</span><span>U</span><span>L</span><span>D</span><span>D</span><span>R</span><span>I</span><span>N</span><span>G</span></a>
+                              </div>
+                           </div>
+                           <a href="#" class="text-[15px]">(0)</a>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+      </main>
       <script src="gsap/ScrollTrigger.min.js"></script>
       <script src="gsap/gsap.min.js"></script>
       <script src="js/main.js"></script>
