Improving hiking section

--- a/index.html
+++ b/index.html
@@ -79,14 +79,15 @@
                <p>R</p>
                <p>G</p>
                <p>Y</p>
-            </divf>
+            </div>
          </div>
       </header>
-      <main>
-         <section class="hiking pt-[80px]  bg-white">
-            <div class="container flex gap-[10%] ">
-               <div class="left flex flex-col  ml-10">
-                  <p class="text1 w-[250px] text-sm text-[#838282] ">VIVEZ LE
+      <main class="main">
+         <section class="main__hiking-section pt-[3.4rem] bg-white">
+            <div class="hiking-section__container edit-container flex gap-[7%]">
+               <div class="hiking-section__left flex flex-col">
+                  <p class="hiking-section__text max-w-[21.5em] leading-4 break-all font-semibold text-sm text-[#838282]">
+                     VIVEZ LE
                      MOUVEMENT
                      PLEINEMENT EN VILLE
                      COMME
@@ -96,44 +97,44 @@
                      VOTRE
                      SUPERACTIVITÉ, ÉQUIPEZ VOUS DU JUSTE NÉCESSAIRE</p>
                   <div
-                     class="hiking__img pt-20 pr-10 w-full justify-end items-end flex "><img
-                        src="images/2.webp" class="w-[40%] min-w-[150px]"
+                     class="hiking-section__image pt-7 pr-[3rem] w-full justify-end items-end flex"><img
+                        src="images/2.webp" class="w-[60%] aspect-[4/5] object-cover"
                         alt></div>
                </div>
-               <div class="right mt-[20%] flex flex-col justify-center  ">
-                  <div class="categories">
-                     <div class="title">
+               <div class="hiking-section__right mt-[15%] flex flex-col justify-center">
+                  <div class="hiking-section__categories">
+                     <div class="hiking-section__title">
                         <h4 class="font-medium mb-12">VESTIAIRES</h4>
                      </div>
                      <div
-                        class="cat rela text-[70px] font-[600] tracking-wide w-full">
-                        <div class="category flex relative w-full items-center" id="c1">
-                           <div class="wrapper h-[1.4em] overflow-y-hidden ">
+                        class="text-[5rem] tracking-tight font-medium font-[600] tracking-wide w-full">
+                        <div class="hiking-section__category flex gap-[0.2em] relative w-full items-center" id="category-1">
+                           <div class="hiking-section__wrapper h-[1.4em] overflow-y-hidden">
                               <div
-                                 class="secondwrapper flex flex-col duration-300">
+                                 class="hiking-section__second-wrapper flex flex-col duration-300">
                                  <a href="#"
                                     class><span>H</span><span>I</span><span>K</span><span>I</span><span>N</span><span>G</span></a>
-                                 <a href="#" class="mt-[-30px]"><span>H</span><span>I</span><span>K</span><span>I</span><span>N</span><span>G</span></a>
+                                 <a href="#"><span>H</span><span>I</span><span>K</span><span>I</span><span>N</span><span>G</span></a>
                               </div>
                            </div>
-                           <a href="#" class="text-[15px] align-middle">(8)</a>
+                           <a href="#" class="text-[15px]">(0)</a>
                         </div>
-                        <div class="category flex relative w-full items-center" id="c2">
+                        <div class="hiking-section__category flex gap-[0.2em] relative w-full items-center" id="category-2">
                            <div class="wrapper h-[1.4em] overflow-y-hidden ">
                               <div
-                                 class="secondwrapper flex flex-col duration-300">
-                                 <a href="#" class><span>T</span><span>R</span><span>I</span><span>A</span><span>L</span></a>
-                                 <a href="#" class="mt-[-30px]"><span>T</span><span>R</span><span>I</span><span>A</span><span>L</span></a>
+                                 class="hiking-section__second-wrapper flex flex-col duration-300">
+                                 <a href="#"><span>T</span><span>R</span><span>I</span><span>A</span><span>L</span></a>
+                                 <a href="#"><span>T</span><span>R</span><span>I</span><span>A</span><span>L</span></a>
                               </div>
                            </div>
-                           <a class="text-[15px] align-middle" href="#">(6)</a>
+                           <a class="text-[15px]" href="#">(0)</a>
                         </div>
-                        <div class="category flex relative w-full items-center " id="c3">
-                           <div class="wrapper h-[1.4em] overflow-y-hidden ">
+                        <div class="hiking-section__category flex gap-[0.2em] relative w-full items-center " id="category-3">
+                           <div class="hiking-section__wrapper h-[1.4em] overflow-y-hidden ">
                               <div
-                                 class="secondwrapper flex flex-col duration-300">
+                                 class="hiking-section__second-wrapper flex flex-col duration-300">
                                  <a href="#" class><span>B</span><span>O</span><span>U</span><span>L</span><span>D</span><span>D</span><span>R</span><span>I</span><span>N</span><span>G</span></a>
-                                 <a href="#" class="mt-[-30px]"><span>B</span><span>O</span><span>U</span><span>L</span><span>D</span><span>D</span><span>R</span><span>I</span><span>N</span><span>G</span></a>
+                                 <a href="#"><span>B</span><span>O</span><span>U</span><span>L</span><span>D</span><span>D</span><span>R</span><span>I</span><span>N</span><span>G</span></a>
                               </div>
                            </div>
                            <a href="#" class="text-[15px]">(0)</a>
