Improving hiking section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
          </div>
       </header>
       <main class="main">
-         <section class="main__hiking-section pt-[3.4rem] bg-white">
+         <section class="main__hiking-section pt-[3.4rem] bg-white h-screen">
             <div class="hiking-section__container edit-container flex gap-[7%]">
                <div class="hiking-section__left flex flex-col">
                   <p class="hiking-section__text max-w-[21.5em] leading-4 break-all font-semibold text-sm text-[#838282]">
