Improving hiking section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <h4 class="font-medium mb-12">VESTIAIRES</h4>
                      </div>
                      <div
-                        class="text-[5rem] tracking-tight font-medium font-[600] tracking-wide w-full">
+                        class="text-[5rem] tracking-[-2px] font-[600] w-full">
                         <div class="hiking-section__category flex gap-[0.2em] relative w-full items-center" id="category-1">
                            <div class="hiking-section__wrapper h-[1.4em] overflow-y-hidden">
                               <div
@@ -123,8 +123,8 @@
                            <div class="wrapper h-[1.4em] overflow-y-hidden ">
                               <div
                                  class="hiking-section__second-wrapper flex flex-col duration-300">
-                                 <a href="#"><span>T</span><span>R</span><span>I</span><span>A</span><span>L</span></a>
-                                 <a href="#"><span>T</span><span>R</span><span>I</span><span>A</span><span>L</span></a>
+                                 <a href="#"><span>T</span><span>R</span><span>A</span><span>I</span><span>L</span></a>
+                                 <a href="#"><span>T</span><span>R</span><span>A</span><span>I</span><span>L</span></a>
                               </div>
                            </div>
                            <a class="text-[15px]" href="#">(0)</a>
