--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
          <section class="main__hiking-section pt-[3.4rem] bg-white h-screen">
             <div class="hiking-section__container edit-container flex gap-[7%]">
                <div class="hiking-section__left flex flex-col">
-                  <p class="hiking-section__text max-w-[21.5em] leading-4 break-all font-semibold text-sm text-[#838282]">
+                  <p
+                     class="hiking-section__text max-w-[21.5em] leading-4 break-all font-semibold text-sm text-[#838282]">
                      VIVEZ LE
                      MOUVEMENT
                      PLEINEMENT EN VILLE
@@ -97,44 +98,69 @@
                      VOTRE
                      SUPERACTIVITÉ, ÉQUIPEZ VOUS DU JUSTE NÉCESSAIRE</p>
                   <div
-                     class="hiking-section__image pt-7 pr-[3rem] w-full justify-end items-end flex"><img
-                        src="images/2.webp" class="w-[60%] aspect-[4/5] object-cover"
-                        alt></div>
+                  class="hiking-section__image relative pt-7 pr-[3rem]  justify-end items-end flex">
+                  <img
+                  src="images/2.webp"
+                  class="w-[60%] aspect-[4/5] object-cover absolute  " id="photo-2"
+                  alt>
+                  <img
+                  src="images/3.webp"
+                  class="w-[60%] aspect-[4/5] object-cover absolute" id="photo-3"
+                  alt>
+                  <img
+                     src="images/1.webp"
+                     class="w-[60%] aspect-[4/5] object-cover absolute " id="photo-1"
+                     alt>
+                  </div>
                </div>
-               <div class="hiking-section__right mt-[15%] flex flex-col justify-center">
+               <div
+                  class="hiking-section__right mt-[15%] flex flex-col justify-center">
                   <div class="hiking-section__categories">
                      <div class="hiking-section__title">
                         <h4 class="font-medium mb-12">VESTIAIRES</h4>
                      </div>
                      <div
                         class="text-[5rem] tracking-[-2px] font-[600] w-full">
-                        <div class="hiking-section__category flex gap-[0.2em] relative w-full items-center" id="category-1">
-                           <div class="hiking-section__wrapper h-[1.4em] overflow-y-hidden">
+                        <div
+                           class="hiking-section__category flex gap-[0.2em] relative w-full items-center"
+                           id="category-1">
+                           <div
+                              class="hiking-section__wrapper h-[1.4em] overflow-y-hidden">
                               <div
                                  class="hiking-section__second-wrapper flex flex-col duration-300">
                                  <a href="#"
                                     class><span>H</span><span>I</span><span>K</span><span>I</span><span>N</span><span>G</span></a>
-                                 <a href="#"><span>H</span><span>I</span><span>K</span><span>I</span><span>N</span><span>G</span></a>
+                                 <a
+                                    href="#"><span>H</span><span>I</span><span>K</span><span>I</span><span>N</span><span>G</span></a>
                               </div>
                            </div>
-                           <a href="#" class="text-[15px]">(0)</a>
+                           <a href="#" class="text-[15px]">( 0 )</a>
                         </div>
-                        <div class="hiking-section__category flex gap-[0.2em] relative w-full items-center" id="category-2">
+                        <div
+                           class="hiking-section__category flex gap-[0.2em] relative w-full items-center"
+                           id="category-2">
                            <div class="wrapper h-[1.4em] overflow-y-hidden ">
                               <div
                                  class="hiking-section__second-wrapper flex flex-col duration-300">
-                                 <a href="#"><span>T</span><span>R</span><span>A</span><span>I</span><span>L</span></a>
-                                 <a href="#"><span>T</span><span>R</span><span>A</span><span>I</span><span>L</span></a>
+                                 <a
+                                    href="#"><span>T</span><span>R</span><span>A</span><span>I</span><span>L</span></a>
+                                 <a
+                                    href="#"><span>T</span><span>R</span><span>A</span><span>I</span><span>L</span></a>
                               </div>
                            </div>
-                           <a class="text-[15px]" href="#">(0)</a>
+                           <a class="text-[15px]" href="#">( 0 )</a>
                         </div>
-                        <div class="hiking-section__category flex gap-[0.2em] relative w-full items-center " id="category-3">
-                           <div class="hiking-section__wrapper h-[1.4em] overflow-y-hidden ">
+                        <div
+                           class="hiking-section__category flex gap-[0.2em] relative w-full items-center"
+                           id="category-3">
+                           <div
+                              class="hiking-section__wrapper h-[1.4em] overflow-y-hidden ">
                               <div
                                  class="hiking-section__second-wrapper flex flex-col duration-300">
-                                 <a href="#" class><span>B</span><span>O</span><span>U</span><span>L</span><span>D</span><span>D</span><span>R</span><span>I</span><span>N</span><span>G</span></a>
-                                 <a href="#"><span>B</span><span>O</span><span>U</span><span>L</span><span>D</span><span>D</span><span>R</span><span>I</span><span>N</span><span>G</span></a>
+                                 <a href="#"
+                                    class><span>B</span><span>O</span><span>U</span><span>L</span><span>D</span><span>D</span><span>R</span><span>I</span><span>N</span><span>G</span></a>
+                                 <a
+                                    href="#"><span>B</span><span>O</span><span>U</span><span>L</span><span>D</span><span>D</span><span>R</span><span>I</span><span>N</span><span>G</span></a>
                               </div>
                            </div>
                            <a href="#" class="text-[15px]">(0)</a>
